(Note: this file has been re-arranged to be in reverse chronological
order, which is The Right Thing for ChangeLogs - DLC)

February 26, 2020 (fortune-mod 2.16.0)

	Better portability to Microsoft Windows and other OSes
	Thanks to AppVeyor (done by Shlomi Fish).

	Add the -u flag [from debian]

	Add fortune.desktop [from debian]

	Remove backspaces in a cookie [from debian]

	Complete the lyrics of a Leonard Cohen song [from debian]

	Correct a misattribution.

February 23, 2020 (fortune-mod 2.14.0)

	Correct some typos and add some new cookies.

	Better Win32/Win64 Portability (AppVeyor is still failing.)

	Code cleanups.

December 18, 2019 (fortune-mod 2.12.0)

	Extract rinutils as aa package and require it as a dep:
	https://github.com/shlomif/rinutils/ .

	Move some jokes to the offensive collection:
	https://github.com/shlomif/fortune-mod/pull/38 - thanks
	to @s0nata .

June 30, 2019 (fortune-mod 2.10.0)

	Move strfile and unstr to /usr/bin :
	https://github.com/shlomif/fortune-mod/issues/35

	Code cleanups: warnings and portability.

	Better porting to windows / appveyor-CI
	(still not perfect)

June 07, 2019 (fortune-mod 2.8.0)

	Add some quotes by amigojapan.

	Some improvements for spelling, punctuation and grammar.

	Extract a common C header.

	Add TidyAll tests.

December 19, 2018 (fortune-mod 2.6.2)

	Fix the cmake files installation paths. See
	https://github.com/shlomif/fortune-mod/pull/29 .

	Some improvements for spelling, punctuation and grammar.

	Normalize the numbering of "Great Moments in History":
	https://github.com/shlomif/fortune-mod/issues/28 .

July 10, 2018 (fortune-mod 2.6.1)

	Fix the previously rotated display of offensive fortunes (using the "-o"
	or "-a" flags). See https://github.com/shlomif/fortune-mod/issues/26 .

	Incorporate several more minor patches from Debian.

June 26, 2018 (fortune-mod 2.6.0)

	Incorporate patches from the Debian package.

	Add the "tao", "pratchett" and many individual cookies.
